--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Sial">
   <link rel="shortcut icon" href="./favicon.png" type="image/x-icon">
-  <link rel="stylesheet" href="./normalize.css">
   <link rel="stylesheet" href="./css/style.css">
 
   <title>Sial - Sistema Integrado de Administración Gubernamental </title>
@@ -21,24 +20,24 @@
       </a>
       <ul class="main-nav__list">
         <li class="main-nav__item">
-          <a href="/" class="main-nav__link">Inicio</a>
+          <a href="/" class="main-nav__link main-nav__link--focus">Inicio</a>
         </li>
         <li class="main-nav__item">
-          <a href="./pages/acerca_de.html" class="main-nav__link">Acerca de</a>
+          <a href="./pages/acerca_de.html " class="main-nav__link">Acerca de</a>
         </li>
         <li class="main-nav__item">
-          <a href="#" class="main-nav__link">Clientes</a>
+          <a href="./pages/clients.html" class="main-nav__link">Clientes</a>
         </li>
         <li class="main-nav__item">
-          <a href="#" class="main-nav__link">Manuales</a>
+          <a href="./pages/manuales.html" class="main-nav__link">Manuales</a>
         </li>
         <li class="main-nav__item  main-nav__item--hidden">
-          <a href="#" class="main-nav__link--mobile">
+          <a href="./pages/contact.html" class="main-nav__link--mobile">
             <button class="main-nav__btn">Contáctenos</button>
           </a>
         </li>
       </ul>
-      <a href="#" class="main-nav__link--large">
+      <a href="./pages/contact.html" class="main-nav__link--large">
         <button class="main-nav__btn">Contáctenos</button>
       </a>
       <div class="mobile-menu">
@@ -60,7 +59,7 @@
             módulos personalizados para cada tipo de empresa Privada ó Entidades Públicas.
           </p>
           <div class="hero__container-btn">
-            <a href="#" class="hero__link">
+            <a href="./pages/contact.html" class="hero__link">
               <button class="hero__btn">Contáctenos</button>
             </a>
           </div>
@@ -117,27 +116,29 @@
           <h3 class="footer__title">Sistema de Administración<br>Logística S.I.A.L.</h3>
           <div class="footer-container-social__icons">
             <a href="https://www.facebook.com/teo.tc.31" class="social-icon social-icon__facebook" target="_blank"></a>
-            <a href="https://www.youtube.com/channel/UChAKXAkwVJktL1PuA-omTBg/videos" class="social-icon social-icon__youtube" target="_blank"></a>
-            <a href="https://api.whatsapp.com/send?phone=51971727477" class="social-icon social-icon__whatsapp" target="_blank"></a>
+            <a href="https://www.youtube.com/channel/UChAKXAkwVJktL1PuA-omTBg/videos"
+              class="social-icon social-icon__youtube" target="_blank"></a>
+            <a href="https://api.whatsapp.com/send?phone=51971727477" class="social-icon social-icon__whatsapp"
+              target="_blank"></a>
           </div>
         </div>
         <div class="footer-container-nav">
           <h3 class="footer__title">Explorar</h3>
           <ul class="footer-nav">
             <li class="footer-nav__item">
-              <a href="#" class="footer-nav__link">Inicio</a>
+              <a href="/" class="footer-nav__link">Inicio</a>
             </li>
             <li class="footer-nav__item">
-              <a href="#" class="footer-nav__link">Acerca&nbspde</a>
+              <a href="./pages/acerca_de.html" class="footer-nav__link">Acerca&nbspde</a>
             </li>
             <li class="footer-nav__item">
-              <a href="#" class="footer-nav__link">Clientes</a>
+              <a href="./pages/clients.html" class="footer-nav__link">Clientes</a>
             </li>
             <li class="footer-nav__item">
-              <a href="#" class="footer-nav__link">Manuales</a>
+              <a href="./pages/manuales.html" class="footer-nav__link">Manuales</a>
             </li>
             <li class="footer-nav__item">
-              <a href="#" class="footer-nav__link">Contacto</a>
+              <a href="./pages/contact.html" class="footer-nav__link">Contacto</a>
             </li>
           </ul>
         </div>
@@ -162,7 +163,6 @@
       </section>
     </div>
   </footer>
-
 
 
 
