--- a/pages/acerca_de.html
+++ b/pages/acerca_de.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="author" content="Sial" />
   <link rel="shortcut icon" href="../favicon.png" type="image/x-icon" />
-  <link rel="stylesheet" href="../normalize.css" />
   <link rel="stylesheet" href="../css/acerca-de.css" />
 
   <title>Sial - Acerca de</title>
@@ -24,21 +23,21 @@
           <a href="/" class="main-nav__link">Inicio</a>
         </li>
         <li class="main-nav__item">
-          <a href="./acerca_de.html" class="main-nav__link">Acerca de</a>
+          <a href="./acerca_de.html" class="main-nav__link main-nav__link--focus">Acerca de</a>
         </li>
         <li class="main-nav__item">
-          <a href="#" class="main-nav__link">Clientes</a>
+          <a href="./clients.html" class="main-nav__link">Clientes</a>
         </li>
         <li class="main-nav__item">
-          <a href="#" class="main-nav__link">Manuales</a>
+          <a href="./manuales.html" class="main-nav__link">Manuales</a>
         </li>
         <li class="main-nav__item main-nav__item--hidden">
-          <a href="#" class="main-nav__link--mobile">
+          <a href="./contact.html" class="main-nav__link--mobile">
             <button class="main-nav__btn">Contáctenos</button>
           </a>
         </li>
       </ul>
-      <a href="#" class="main-nav__link--large">
+      <a href="./contact.html" class="main-nav__link--large">
         <button class="main-nav__btn">Contáctenos</button>
       </a>
       <div class="mobile-menu">
@@ -292,19 +291,19 @@
             <h3 class="footer__title">Explorar</h3>
             <ul class="footer-nav">
               <li class="footer-nav__item">
-                <a href="#" class="footer-nav__link">Inicio</a>
+                <a href="/" class="footer-nav__link">Inicio</a>
               </li>
               <li class="footer-nav__item">
-                <a href="#" class="footer-nav__link">Acerca&nbspde</a>
+                <a href="./acerca_de.html" class="footer-nav__link">Acerca&nbspde</a>
               </li>
               <li class="footer-nav__item">
-                <a href="#" class="footer-nav__link">Clientes</a>
+                <a href="./clients.html" class="footer-nav__link">Clientes</a>
               </li>
               <li class="footer-nav__item">
-                <a href="#" class="footer-nav__link">Manuales</a>
+                <a href="./manuales.html" class="footer-nav__link">Manuales</a>
               </li>
               <li class="footer-nav__item">
-                <a href="#" class="footer-nav__link">Contacto</a>
+                <a href="./contact.html" class="footer-nav__link">Contacto</a>
               </li>
             </ul>
           </div>
