--- a/pages/manuales.html
+++ b/pages/manuales.html
@@ -15,7 +15,7 @@
 
 <body>
   <!-------------- MENU DE NAVEGACION -------------->
-  <header class="header">
+  <header class="header" id="header">
     <nav class="main-nav">
       <a href="/">
         <img src="../img/logo-sial.svg" alt="Logo de Sial" class="main-nav__logo" />
@@ -87,7 +87,7 @@
         </article>
       </div>
       <button class="video__button"><a class="video__button-link"
-          href="https://www.youtube.com/channel/UChAKXAkwVJktL1PuA-omTBg" target="_blank">Ver Todo</a></button>
+          href="https://www.youtube.com/channel/UChAKXAkwVJktL1PuA-omTBg" target="_blank">Ver Todo en YouTube</a></button>
     </section>
 
     <!-------------- DOCUMENTOS -------------->
