--- a/index.html
+++ b/index.html
@@ -5,16 +5,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Sial">
-  <meta name="description" content="Sistema de Administracion Logistica – S.I.A.L Este Sistema es una herramienta informática, diseñado para uso del área de ABASTECIMIENTOS y ALMACEN de las entidades del Gobierno Local, Gobierno Regional y Gobierno Nacional">
-  <meta name="keywords" content="Sistema SIAL,SialSoft.pe,sialsoft,SIAL,Sistema de Logistica,Sistema de Abastecimiento,Sistema de de Control de Combustible,Sistema de Almacen">
+  <meta name="description"
+    content="Sistema de Administracion Logistica – S.I.A.L Este Sistema es una herramienta informática, diseñado para uso del área de ABASTECIMIENTOS y ALMACEN de las entidades del Gobierno Local, Gobierno Regional y Gobierno Nacional">
+  <meta name="keywords"
+    content="Sistema SIAL,SialSoft.pe,sialsoft,SIAL,Sistema de Logistica,Sistema de Abastecimiento,Sistema de de Control de Combustible,Sistema de Almacen">
   <link rel="shortcut icon" href="./favicon.png" type="image/x-icon">
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/style.css?v-1.0">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 
   <title>Sial - Sistema Integrado de Administración Gubernamental </title>
 </head>
 
-<body>
+<body id="body">
   <!-------------- MENU DE NAVEGACION -------------->
   <header class="header" id="header">
     <nav class="main-nav">
@@ -22,11 +24,28 @@
         <img src="./img/logo-sial.svg" alt="Logo de Sial" class="main-nav__logo">
       </a>
       <ul class="main-nav__list">
-        <li class="main-nav__item">
-          <a href="/" class="main-nav__link main-nav__link--focus">Inicio</a>
+        <li class="main-nav__item main-nav__item--focus">
+          <a href="/" class="main-nav__link main-nav__link">Inicio</a>
         </li>
         <li class="main-nav__item">
-          <a href="./pages/acerca_de.html " class="main-nav__link">Acerca de</a>
+          <a href="./pages/acerca_de.html " class="main-nav__link" id="productos">Productos</a>
+          <ul class="productos__list">
+            <li class="productos__item">
+              <a class="productos__link" href="./pages/acerca_de.html#modulos">M. Abastecimiento</a>
+            </li>
+            <li class="productos__item">
+              <a class="productos__link" href="./pages/acerca_de.html#modulos">M. Almacén</a>
+            </li>
+            <li class="productos__item">
+              <a class="productos__link" href="./pages/acerca_de.html#modulos">M. Combustible</a>
+            </li>
+            <li class="productos__item">
+              <a class="productos__link" href="./pages/acerca_de.html#modulos">M. Caja/Recaudacion</a>
+            </li>
+            <li class="productos__item">
+              <a class="productos__link" href="./pages/acerca_de.html#modulos">M. Reportes</a>
+            </li>
+          </ul>
         </li>
         <li class="main-nav__item">
           <a href="./pages/clients.html" class="main-nav__link">Clientes</a>
@@ -34,15 +53,10 @@
         <li class="main-nav__item">
           <a href="./pages/manuales.html" class="main-nav__link">Manuales</a>
         </li>
-        <li class="main-nav__item  main-nav__item--hidden">
-          <a href="./pages/contact.html" class="main-nav__link--mobile">
-            <button class="main-nav__btn">Contáctenos</button>
-          </a>
+        <li class="main-nav__item">
+          <a href="./pages/contact.html" class="main-nav__link">Contacto</a>
         </li>
       </ul>
-      <a href="./pages/contact.html" class="main-nav__link--large">
-        <button class="main-nav__btn">Contáctenos</button>
-      </a>
       <div class="mobile-menu">
         <span class="line line-top"></span>
         <span class="line line-medium"></span>
@@ -118,7 +132,8 @@
         <div class="footer-container-social">
           <h3 class="footer__title">Sistema de Administración<br>Logística S.I.A.L.</h3>
           <div class="footer-container-social__icons">
-            <a href="https://www.facebook.com/teo.tc.31" class="social-icon social-icon__facebook" target="_blank"></a>
+            <a href="https://www.facebook.com/wwwsialsoftpe-1626497410988264/" class="social-icon social-icon__facebook"
+              target="_blank"></a>
             <a href="https://www.youtube.com/channel/UChAKXAkwVJktL1PuA-omTBg/videos"
               class="social-icon social-icon__youtube" target="_blank"></a>
             <a href="https://api.whatsapp.com/send?phone=51971727477" class="social-icon social-icon__whatsapp"
