--- a/pages/acerca_de.html
+++ b/pages/acerca_de.html
@@ -9,13 +9,13 @@
   <meta name="keywords" content="Sistema SIAL,SialSoft.pe,sialsoft,SIAL,Sistema de Logistica,Sistema de Abastecimiento,Sistema de de Control de Combustible,Sistema de Almacen">
   <meta name="author" content="Sial" />
   <link rel="shortcut icon" href="../favicon.png" type="image/x-icon" />
-  <link rel="stylesheet" href="../css/acerca-de.css" />
+  <link rel="stylesheet" href="../css/acerca-de.css?v-1.0" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 
-  <title>Sial - Acerca de</title>
+  <title>Sial - Productos</title>
 </head>
 
-<body>
+<body id="body">
   <!-------------- MENU DE NAVEGACION -------------->
   <header class="header" id="header">
     <nav class="main-nav">
@@ -26,8 +26,8 @@
         <li class="main-nav__item">
           <a href="/" class="main-nav__link">Inicio</a>
         </li>
-        <li class="main-nav__item">
-          <a href="./acerca_de.html" class="main-nav__link main-nav__link--focus">Acerca de</a>
+        <li class="main-nav__item main-nav__item--focus">
+          <a href="./acerca_de.html" class="main-nav__link main-nav__link">Productos</a>
         </li>
         <li class="main-nav__item">
           <a href="./clients.html" class="main-nav__link">Clientes</a>
@@ -35,15 +35,10 @@
         <li class="main-nav__item">
           <a href="./manuales.html" class="main-nav__link">Manuales</a>
         </li>
-        <li class="main-nav__item main-nav__item--hidden">
-          <a href="./contact.html" class="main-nav__link--mobile">
-            <button class="main-nav__btn">Contáctenos</button>
-          </a>
+        <li class="main-nav__item">
+          <a href="./contact.html" class="main-nav__link">Contacto</a>
         </li>
       </ul>
-      <a href="./contact.html" class="main-nav__link--large">
-        <button class="main-nav__btn">Contáctenos</button>
-      </a>
       <div class="mobile-menu">
         <span class="line line-top"></span>
         <span class="line line-medium"></span>
@@ -60,7 +55,7 @@
           <img class="about-hero__image" src="../img/acerca_de/notebook.png" alt="Pantalla principal de Sial" />
         </figure>
         <div class="about-hero__wrapper">
-          <h1 class="about-hero__title">Acerca de</h1>
+          <h1 class="about-hero__title">Productos</h1>
           <h2 class="about-hero__subtitle">
             SISTEMA DE ADMINISTRACION LOGISTICA – S.I.A.L.
           </h2>
@@ -79,78 +74,88 @@
     <section class="section-modules" id="modulos">
       <div class="container-modules">
         <h2 class="container-modules__title">Módulos del Sistema</h2>
-        <ul class="modules">
-          <li class="modules__item modules__item--abastecimiento">
-            <img class="modules__image" src="../img/acerca_de/img-abas.svg" alt="Imagen de Abastecimiento"/>
-            <h3 class="modules__title">Módulo de Abastecimiento</h3>
-            <ul class="feature-list">
-              <li class="feature-item">
-                Elaboración de Solicitud de Cotización
-              </li>
-              <li class="feature-item">
-                Elaboración del Cuadro Comparativo de Cotizaciones
-              </li>
-              <li class="feature-item">Registro y control de Contratos</li>
-              <li class="feature-item">Elaboración de Orden de Compra</li>
-              <li class="feature-item">Elaboración de Orden de Servicio</li>
-            </ul>
-          </li>
-          <li class="modules__item modules__item--almacen">
-            <img class="modules__image" src="../img/acerca_de/img-almacen.svg" alt="Imagen de un almacen" />
-            <h3 class="modules__title">Módulo de Almacén</h3>
-            <ul class="feature-list">
-              <li class="feature-item">
-                Elaboración de Inventario Inicial de Bienes de Almacén
-              </li>
-              <li class="feature-item">
-                Elaboración de Pedido – Comprobante de Salida (PECOSAS)
-              </li>
-              <li class="feature-item">
-                Internamiento de Bienes según Orden de Compra, Inventario y
-                NEAS
-              </li>
-              <li class="feature-item">
-                Elaboración de Notas de Entrada a Almacén (NEAs)
-              </li>
-            </ul>
-          </li>
-          <li class="modules__item modules__item--combustible">
-            <img class="modules__image" src="../img/acerca_de/img-fuel.svg" alt="Imagen de combustible" />
-            <h3 class="modules__title">Módulo de Control de Combustible</h3>
-            <ul class="feature-list">
-              <li class="feature-item">Elaboración de Vales</li>
-              <li class="feature-item">
-                Elaboración de Liquidación de Vales
-              </li>
-            </ul>
-          </li>
-          <li class="modules__item modules__item--caja">
-            <img class="modules__image" src="../img/acerca_de/img-money.svg" alt="Imagen de dinero" />
-            <h3 class="modules__title">Módulo de Caja/Recaudacion</h3>
-            <ul class="feature-list">
-              <li class="feature-item">Recaudacion de Ingresos</li>
-              <li class="feature-item">Reportes</li>
-            </ul>
-          </li>
-          <li class="modules__item modules__item--reportes">
-            <img class="modules__image" src="../img/acerca_de/img-reports.svg" alt="Imagen de un reporte" />
-            <h3 class="modules__title">Reportes</h3>
-            <ul class="feature-list">
-              <li class="feature-item">
-                Emisión de REPORTES GENERALES (Adquisiciones por meta,
-                Movimiento de Bienes, Notas de contabilidad mensual, Kardex,
-                Bincard y Otros (incluye en Formato PDF y para Exportar a
-                Excel).
-              </li>
-              <li class="feature-item">
-                Generación de Archivo para el registro de información en el
-                SEACE, de las Órdenes de Compra y Servicios, de conformidad a
-                la Directiva N° 007-2012-OSCE/CD, Resolución N°
-                269-2013-OSCE/PRE y Comunicado N° 002-2013-OSCE/DTN
-              </li>
-            </ul>
-          </li>
-        </ul>
+        <div class="carrousel">
+          <button id="arrowLeft" class="carrousel__arrow-left">
+          <svg  xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path class="arrow-svg" d="M8.122 24l-4.122-4 8-8-8-8 4.122-4 11.878 12z" fill="white"/></svg>
+          </button>
+          <ul class="modules">
+            <li class="modules__item modules__item--abastecimiento">
+              <img class="modules__image" src="../img/acerca_de/img-abas.svg" alt="Imagen de Abastecimiento"/>
+              <h3 class="modules__title">Módulo de Abastecimiento</h3>
+              <ul class="feature-list">
+                <li class="feature-item">
+                  Elaboración de Solicitud de Cotización
+                </li>
+                <li class="feature-item">
+                  Elaboración del Cuadro Comparativo de Cotizaciones
+                </li>
+                <li class="feature-item">Registro y control de Contratos</li>
+                <li class="feature-item">Elaboración de Orden de Compra</li>
+                <li class="feature-item">Elaboración de Orden de Servicio</li>
+              </ul>
+            </li>
+            <li class="modules__item modules__item--almacen">
+              <img class="modules__image" src="../img/acerca_de/img-almacen.svg" alt="Imagen de un almacen" />
+              <h3 class="modules__title">Módulo de Almacén</h3>
+              <ul class="feature-list">
+                <li class="feature-item">
+                  Elaboración de Inventario Inicial de Bienes de Almacén
+                </li>
+                <li class="feature-item">
+                  Elaboración de Pedido – Comprobante de Salida (PECOSAS)
+                </li>
+                <li class="feature-item">
+                  Internamiento de Bienes según Orden de Compra, Inventario y
+                  NEAS
+                </li>
+                <li class="feature-item">
+                  Elaboración de Notas de Entrada a Almacén (NEAs)
+                </li>
+              </ul>
+            </li>
+            <li class="modules__item modules__item--combustible">
+              <img class="modules__image" src="../img/acerca_de/img-fuel.svg" alt="Imagen de combustible" />
+              <h3 class="modules__title">Módulo de Control de Combustible</h3>
+              <ul class="feature-list">
+                <li class="feature-item">Elaboración de Vales</li>
+                <li class="feature-item">
+                  Elaboración de Liquidación de Vales
+                </li>
+              </ul>
+            </li>
+            <li class="modules__item modules__item--caja">
+              <img class="modules__image" src="../img/acerca_de/img-money.svg" alt="Imagen de dinero" />
+              <h3 class="modules__title">Módulo de Caja/Recaudacion</h3>
+              <ul class="feature-list">
+                <li class="feature-item">Recaudacion de Ingresos</li>
+                <li class="feature-item">Reportes</li>
+              </ul>
+            </li>
+            <li class="modules__item modules__item--reportes">
+              <img class="modules__image" src="../img/acerca_de/img-reports.svg" alt="Imagen de un reporte" />
+              <h3 class="modules__title">Reportes</h3>
+              <ul class="feature-list">
+                <li class="feature-item">
+                  Emisión de REPORTES GENERALES (Adquisiciones por meta,
+                  Movimiento de Bienes, Notas de contabilidad mensual, Kardex,
+                  Bincard y Otros (incluye en Formato PDF y para Exportar a
+                  Excel).
+                </li>
+                <li class="feature-item">
+                  Generación de Archivo para el registro de información en el
+                  SEACE, de las Órdenes de Compra y Servicios, de conformidad a
+                  la Directiva N° 007-2012-OSCE/CD, Resolución N°
+                  269-2013-OSCE/PRE y Comunicado N° 002-2013-OSCE/DTN
+                </li>
+              </ul>
+            </li>
+          </ul>
+          <button id="arrowRight" class="carrousel__arrow-right">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path class="arrow-svg" d="M8.122 24l-4.122-4 8-8-8-8 4.122-4 11.878 12z" fill="white"/></svg>
+          </button>
+          <div class="hidden-scroll" id="hidden-scroll"></div>
+        </div>
+
       </div>
     </section>
 
@@ -286,7 +291,7 @@
           <div class="footer-container-social">
             <h3 class="footer__title">Sistema de Administración<br>Logística S.I.A.L.</h3>
             <div class="footer-container-social__icons">
-              <a href="https://www.facebook.com/teo.tc.31" class="social-icon social-icon__facebook" target="_blank"></a>
+              <a href="https://www.facebook.com/wwwsialsoftpe-1626497410988264/" class="social-icon social-icon__facebook" target="_blank"></a>
               <a href="https://www.youtube.com/channel/UChAKXAkwVJktL1PuA-omTBg/videos" class="social-icon social-icon__youtube" target="_blank"></a>
               <a href="https://api.whatsapp.com/send?phone=51971727477" class="social-icon social-icon__whatsapp" target="_blank"></a>
             </div>
@@ -335,6 +340,7 @@
 
   <script src="../js/main.js"></script>
   <script src="../js/tab.js"></script>
+  <script src="../js/carrousel.js"></script>
 </body>
 
 </html>
