--- a/pages/clients.html
+++ b/pages/clients.html
@@ -7,11 +7,11 @@
   <meta name="description" content="Sistema de Administracion Logistica – S.I.A.L Este Sistema es una herramienta informática, diseñado para uso del área de ABASTECIMIENTOS y ALMACEN de las entidades del Gobierno Local, Gobierno Regional y Gobierno Nacional">
   <meta name="keywords" content="Sistema SIAL,SialSoft.pe,sialsoft,SIAL,Sistema de Logistica,Sistema de Abastecimiento,Sistema de de Control de Combustible,Sistema de Almacen">
   <link rel="shortcut icon" href="../favicon.png" type="image/x-icon">
-  <link rel="stylesheet" href="../css/clients.css">
+  <link rel="stylesheet" href="../css/clients.css?v-1.0">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
   <title>Sial - Clientes</title>
 </head>
-<body>
+<body id="body">
   <!-------------- MENU DE NAVEGACION -------------->
   <header class="header" id="header">
     <nav class="main-nav">
@@ -23,23 +23,35 @@
           <a href="/" class="main-nav__link">Inicio</a>
         </li>
         <li class="main-nav__item">
-          <a href="./acerca_de.html" class="main-nav__link">Acerca de</a>
+          <a href="./acerca_de.html" class="main-nav__link">Productos</a>
+          <ul class="productos__list">
+            <li class="productos__item">
+              <a class="productos__link" href="./acerca_de.html#modulos">M. Abastecimiento</a>
+            </li>
+            <li class="productos__item">
+              <a class="productos__link" href="./acerca_de.html#modulos">M. Almacén</a>
+            </li>
+            <li class="productos__item">
+              <a class="productos__link" href="./acerca_de.html#modulos">M. Combustible</a>
+            </li>
+            <li class="productos__item">
+              <a class="productos__link" href="./acerca_de.html#modulos">M. Caja/Recaudacion</a>
+            </li>
+            <li class="productos__item">
+              <a class="productos__link" href="./acerca_de.html#modulos">M. Reportes</a>
+            </li>
+          </ul>
         </li>
-        <li class="main-nav__item">
-          <a href="./clients.html" class="main-nav__link main-nav__link--focus">Clientes</a>
+        <li class="main-nav__item main-nav__item--focus">
+          <a href="./clients.html" class="main-nav__link main-nav__link">Clientes</a>
         </li>
         <li class="main-nav__item">
           <a href="./manuales.html" class="main-nav__link">Manuales</a>
         </li>
-        <li class="main-nav__item  main-nav__item--hidden">
-          <a href="./contact.html" class="main-nav__link--mobile">
-            <button class="main-nav__btn">Contáctenos</button>
-          </a>
+        <li class="main-nav__item">
+          <a href="./contact.html" class="main-nav__link">Contacto</a>
         </li>
       </ul>
-      <a href="./contact.html" class="main-nav__link--large">
-        <button class="main-nav__btn">Contáctenos</button>
-      </a>
       <div class="mobile-menu">
         <span class="line line-top"></span>
         <span class="line line-medium"></span>
@@ -127,7 +139,7 @@
         <div class="footer-container-social">
           <h3 class="footer__title">Sistema de Administración<br>Logística S.I.A.L.</h3>
           <div class="footer-container-social__icons">
-            <a href="https://www.facebook.com/teo.tc.31" class="social-icon social-icon__facebook" target="_blank"></a>
+            <a href="https://www.facebook.com/wwwsialsoftpe-1626497410988264/" class="social-icon social-icon__facebook" target="_blank"></a>
             <a href="https://www.youtube.com/channel/UChAKXAkwVJktL1PuA-omTBg/videos" class="social-icon social-icon__youtube" target="_blank"></a>
             <a href="https://api.whatsapp.com/send?phone=51971727477" class="social-icon social-icon__whatsapp" target="_blank"></a>
           </div>
