Up to Server with changes on number of cell

--- a/pages/acerca_de.html
+++ b/pages/acerca_de.html
@@ -9,7 +9,7 @@
   <meta name="keywords" content="Sistema SIAL,SialSoft.pe,sialsoft,SIAL,Sistema de Logistica,Sistema de Abastecimiento,Sistema de de Control de Combustible,Sistema de Almacen">
   <meta name="author" content="Sial" />
   <link rel="shortcut icon" href="../favicon.png" type="image/x-icon" />
-  <link rel="stylesheet" href="../css/acerca-de.css?v-1.0" />
+  <link rel="stylesheet" href="../css/acerca-de.css" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 
   <title>Sial - Productos</title>
@@ -20,7 +20,7 @@
   <header class="header" id="header">
     <nav class="main-nav">
       <a href="/">
-        <img src="../img/logo-sial.svg" alt="Logo de Sial" class="main-nav__logo" />
+        <img src="../favicon.png" alt="Logo de Sial" class="main-nav__logo">
       </a>
       <ul class="main-nav__list">
         <li class="main-nav__item">
@@ -323,9 +323,10 @@
               <dd class="contacto-list__copy">Teofilo Ticona Cruz</dd>
               <dt class="contacto-list__item">Celular:</dt>
               <dd class="contacto-list__copy">
-                <span class="contacto-list__phone">Mov. 950-877943 <br></span>
-                <span class="contacto-list__phone">Mov. 996-000127 <br></span>
                 <span class="contacto-list__phone">Entel. 971-727477</span>
+              <span class="contacto-list__phone">Mov. 971-727307<br></span>
+              <span class="contacto-list__phone">Bitel. 950-877943<br></span>
+              <span class="contacto-list__phone">Claro. 996-000127<br></span>
               </dd>
               <dt class="contacto-list__item">Email:</dt>
               <dd class="contacto-list__copy">teofilo_tc@hotmail.com</dd>
