--- a/pages/contact.html
+++ b/pages/contact.html
@@ -8,7 +8,7 @@
   <meta name="description" content="Sistema de Administracion Logistica – S.I.A.L Este Sistema es una herramienta informática, diseñado para uso del área de ABASTECIMIENTOS y ALMACEN de las entidades del Gobierno Local, Gobierno Regional y Gobierno Nacional">
   <meta name="keywords" content="Sistema SIAL,SialSoft.pe,sialsoft,SIAL,Sistema de Logistica,Sistema de Abastecimiento,Sistema de de Control de Combustible,Sistema de Almacen">
   <link rel="shortcut icon" href="../favicon.png" type="image/x-icon">
-  <link rel="stylesheet" href="../css/contact.css?v-1.0">
+  <link rel="stylesheet" href="../css/contact.css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
   <title>Sial - Contacto</title>
 </head>
@@ -18,7 +18,7 @@
   <header class="header" id="header">
     <nav class="main-nav">
       <a href="/">
-        <img src="../img/logo-sial.svg" alt="Logo de Sial" class="main-nav__logo" />
+        <img src="../favicon.png" alt="Logo de Sial" class="main-nav__logo">
       </a>
       <ul class="main-nav__list">
         <li class="main-nav__item">
@@ -89,9 +89,10 @@
             <dd class="contact__item-copy">teofilo_tc@hotmail.com</dd>
             <dt class="contact__item">Celular:</dt>
             <dd class="contact__item-copy">
-              <span class="contact__phone">Mov. 950-877943 <br></span>
-              <span class="contact__phone">Mov. 996-000127 <br></span>
               <span class="contact__phone">Entel. 971-727477</span>
+              <span class="contact__phone">Mov. 971-727307<br></span>
+              <span class="contact__phone">Bitel. 950-877943<br></span>
+              <span class="contact__phone">Claro. 996-000127<br></span>
             </dd>
           </dl>
           <div class="contact__social">
@@ -149,9 +150,10 @@
               <dd class="contacto-list__copy">Teofilo Ticona Cruz</dd>
               <dt class="contacto-list__item">Celular:</dt>
               <dd class="contacto-list__copy">
-                <span class="contacto-list__phone">Mov. 950-877943 <br></span>
-                <span class="contacto-list__phone">Mov. 996-000127 <br></span>
                 <span class="contacto-list__phone">Entel. 971-727477</span>
+              <span class="contacto-list__phone">Mov. 971-727307<br></span>
+              <span class="contacto-list__phone">Bitel. 950-877943<br></span>
+              <span class="contacto-list__phone">Claro. 996-000127<br></span>
               </dd>
               <dt class="contacto-list__item">Email:</dt>
               <dd class="contacto-list__copy">teofilo_tc@hotmail.com</dd>
